--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="flex flex-col md:flex-row justify-between md:items-end">
         <h1 class="flex-none text-2xl font-bold">0x08 :
           2D Animations (Project)</h1>
-        <p class="md:text-right text-xs md:text-sm" id="by"></p>
+        <p class="md:text-right text-xs md:text-sm" id="by"></p> 
       </header>
       <div class="flex-1 flex flex-col lg:flex-row
                   gap-4 lg:gap-8">
@@ -34,16 +34,7 @@
                 <span class="text-sm">Download</span></a>
           </div>          </div>
         </main>
-        <aside class="flex-none flex flex-col gap-2
-                    lg:max-w-sm min-h-52"
-               id="side-note">
-          <h2 class="text-lg font-bold">Simple
-            <a href="https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame"
-               ><code>requestAnimationFrame</code></a></h2>
-          <p>The value updated by <code>stepperOne</code>
-            is:</p>
-          <pre class="text-xs"><code id="valueFromStepperOne"></code></pre>
-
+    
           <div class="hidden">
             <h2 class="text-lg font-bold">Normalising speed in
               a <a href="https://developer.mozilla.org/en-US/docs/Web/API/window/requestAnimationFrame"
@@ -71,17 +62,17 @@
     <script type="text/javascript"
             src="./canvas-helpers.js"></script>
     <script type="text/javascript"
-            src="./steppers.js"></script>
-    <script type="text/javascript"
-            src="./domel.js"></script>
-    <script type="text/javascript"
-            src="./clock.js"></script>
+            src="./animation.js"></script>
     <script type="text/javascript"
             src="./experiment.js"></script>
     <script type="text/javascript"
             src="./main.js"></script>
     <script type="text/javascript">
-      main()
+      document.addEventListener("DOMContentLoaded", function() {
+        main()
+});
+      
     </script>
   </body>
 </html>
+  
